Add school leader tip for email

--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <h3>Please fill out the form below to register as a School Leader.</h3>
+  <h4>We recommended using your work email to speed up the process of verification.</h4>
+  <br>
+
   <%= f.hidden_field :access, value: "pending" %>
   <div class="field field-flex">
     <%= f.label :first_name, :class => 'teacher-label' %><br>
