--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 <div class="centered">
-<% if !flash[:notice].blank? %>
-  <div class="alert alert-info">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
-<h1 class="main-header">Welcome to the INCS Online Resume Bank</h1>
+  <% if !flash[:notice].blank? %>
+    <div class="alert alert-info">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+  <h1 class="main-header">Welcome to the INCS Online Resume Bank</h1>
 
   <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'pending' %>
     <p>Thank you for your registration. Please allow up to 2 business days for INCS staff to process approval of your account. You have received an email with further information.</p>
@@ -18,107 +18,74 @@
   <% end %>
 
   <h2 class="topic">
-  <br>
-  2016 INCS Teacher Job Fair and Resume Bank
+    <br>
+    2017 INCS Teacher Job Fair
   </h2>
 
   <p class="main-content">
-    The Illinois Network of Charter Schools (INCS) hosted our 11th annual Teacher Job Fair on Saturday, March 5, 2016 at UNO Charter School Network (UCSN) Veterans Memorial Campus. Representatives from the state’s charter schools were on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS continues to seek highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
+  The Illinois Network of Charter Schools (INCS) hosted our 12th annual Teacher Job Fair on Saturday, March 18, 2016 at ASPIRA Business & Finance Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
+  </p>
+
+
+
+  <p class="main-content">
+  <strong>Candidates have the opportunity to:</strong>
+  <ul class="main-content-list">
+    <li>Meet recruiters from over 50 public charter schools representing over 120 campuses</li>
+    <li>Post your resume in the INCS Online Resume Bank, where charter schools look for candidates for various positions year-round</li>
+    <li>Interview on-site with schools looking to hire great teachers and administrators like you</li>
+  </ul>
   </p>
 
   <p class="main-content">
-    If you have any questions, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
-  </p>
-
-<!--   <p class="main-content">The Illinois Network of Charter Schools (INCS) will host our 11th annual Teacher Job Fair on Saturday, March 5, 2016 at UNO Charter School Network (UCSN) Veterans Memorial Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED.</p> -->
-
- <!--  <p class="main-content">
-    <strong>Teachers have the opportunity to:</strong>
-    <ul class="main-content-list">
-      <li>Meet recruiters from over 50 public charter schools representing over 120 campuses</li>
-      <li>Post your resume in the INCS Online Resume Bank, where charter schools look for candidates for various positions year-round</li>
-      <li>Interview on-site with schools looking to hire great teachers like you</li>
-    </ul>
-  </p>
-
-    <p class="main-content">
-    <strong>Schools have the opportunity to:</strong>
-    <ul class="main-content-list">
-      <li>Meet with hundreds of educators</li>
-      <li>View candidates’ resumes and credentials ahead of time using the INCS Online Resume Bank</li>
-      <li>Invite candidates for on-site interviews following the meet and greet portion of the event</li>
-    </ul>
+  <strong>Schools have the opportunity to:</strong>
+  <ul class="main-content-list">
+    <li>Meet with hundreds of educators</li>
+    <li>View candidates’ resumes and credentials ahead of time using the INCS Online Resume Bank</li>
+    <li>Invite candidates for on-site interviews following the meet and greet portion of the event</li>
+  </ul>
   </p>
 
   <p class="main-content"><strong>Agenda</strong></p>
   <p class="main-content">
-    <ul class="main-content-list">
-      <li>8:00 am - 9:00 am: School table set-up</li>
-      <li>8:30 am: Candidate registration begins</li>
-      <li>9:00 am - 12:30 pm: Meet and greet with candidates & schools</li>
-      <li>12:30 pm – 1:30 pm Educational workshops</li>
-      <li>1:00 pm - 3:00 pm: On-site teacher interviews (by invitation only)</li>
-    </ul>
+  <ul class="main-content-list">
+    <li>9:00 am - 10:00 pm: School table set-up and Candidate Registration</li>
+    <li>10:00 am - 12:00 pm: Meet and greet with Candidates & Schools</li>
+    <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation only)</li>
+  </ul>
   </p>
 
-  <p class="main-content"><strong>Registration</strong></p>
-  <p class="main-content">
-  Candidate check-in will open at 8:30am. <span style="text-decoration: underline">On-site registration is available</span>. Advance registration is encouraged to avoid extended wait times.
-  </p>
+  <%# <p class="main-content"><strong>Registration</strong></p> %>
+  <%# <p class="main-content"> %>
+  <%# Candidate check-in will open at 8:30am. <span style="text-decoration: underline">On-site registration is available</span>. Advance registration is encouraged to avoid extended wait times. %>
+  <%# </p> %>
 
   <p class="main-content"><strong>Location</strong></p>
   <p class="main-content">
-  UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632</p>
-  <p class="main-content">Parking is limited and public transportation is encouraged.</p>
-    <ul class="main-content-list">
-      <li>CTA Orange Line: Kedzie
-        <ul class="main-content-sublist">
-          <li>Take #47 bus towards Archer/Cicero, get off at 47th St & Kildare</li>
-          <li>15-20 minute walk from station</li>
-        </ul>
-      <li>CTA Orange Line: Pulaski
-        <ul class="main-content-sublisht">
-          <li>15-20 minute walk from station (.08 mile)</li>
-        </ul>
-      </li>
-      </li>
-      <li>CTA Buses
-        <ul class="main-content-sublist">
-          <li>#47, #53 and #53A</li>
-        </ul>
-      </li>
-    </ul>
-
-  <p class="main-content"><strong>Programming</strong></p>
-  <p class="main-content">
-    Join us immediately after the INCS Teacher Job Fair for one of the following hour long educational workshops. <span class="highlights">CPDUs will be offered for both of these workshops.</span>
+  ASPIRA Business & Finance Campus, 2989 N. Milwaukee Ave, Chicago, IL 60618
   </p>
+  <ul class="main-content-list">
+    <li>There will be street parking available. Registered candidates will received updated parking information as it becomes available.</li>
+    <li>The school is also accessible by public transportation. It is approximately .5 mile southwest of the Belmont Blue Line stop and is easily accessible via CTA Bus #56 Milwaukee.</li>
+  </ul>
 
-  <div class="content-container">
-  <p class="main-content"><img src=""><%=image_tag("Heather-Calomese-Headshot.jpg", :class => "style_image")%><strong>Which Runway Do We Use?</strong></p>
-  <p class="main-content"><em>Presented by</em> <a href="https://www.incschools.org/wp-content/uploads/2014/08/Heather-Calomese-bio.pdf">Heather Calomese</a>, Director of Specialized Instruction, UNO Charter School Network</p>
-
-  <p class="main-content">Managing your special education classroom is like performing the job of an air traffic controller.  Special Education settings can be busy and distracting, which is not the environment that we want with our population of students. How can teachers effectively manage the traffic of their classroom while protecting the learning environment? How do teachers effectively plan and execute transitions?  How do we effectively communicate with the adults and students to ensure learning occurs?  This mini workshop will help participants understand the importance of communication, routines, and planning that will ensure classroom time is maximized and students are engaged.</p>
+  <div class="main-container">
+    <%= button_to "School Leader Registration", "https://docs.google.com/forms/d/e/1FAIpQLSd2POlBM9yr-WfNbRYFOhnTAZCNg8mfF8gFhfSNKCEm2RACsw/viewform?c=0&w=1", method: :get, class: "btn btn-info main-btn" %>
+    <%= button_to "Candidate Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn" %>
   </div>
-  <div class="content-container">
-  <p class="main-content"><%=image_tag("Pryor-headshot-2013.jpg", :class => "style_image")%><strong>First Comes Oracy, then Comes Literacy</strong></p>
-  <p class="main-content"><em>Presented by</em> <a href="https://www.incschools.org/wp-content/uploads/2014/08/Susan-Pryor-bio.pdf">Susan Pryor</a>, Primary Instructional Coordinator, Erie Elementary School</p>
-
-  <p class="main-content">In this session, we will define and describe what oracy means and explore how oral language drives both language and literacy development. Participants will learn specific strategies that help students gain access to material presented in a second language and promote active engagement with both content and language.</p>
-  </div>
-
-    <%= button_to "Schools: Register Here Today!", "https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809", method: :get, class: "btn btn-info btn-centered" %>
 
   <p class="main-content"><br>Click <a href="https://www.facebook.com/media/set/?set=a.10152791985156379.1073741839.91629716378&type=1">here</a> to view photos of our 2015 INCS Teacher Job Fair, where recruiters from <em>over 120 Illinois charter public school campuses met with</em> highly-qualified applicants for more than <em>500</em> teaching, school leadership, social work, school nurse and administrative positions.
   </p>
 
   <p class="main-content">
-    ATTENTION teacher preparation programs and schools of education: We are always looking for more recruitment partners that can support our outreach to teachers. Please consider sharing our site with highly qualified candidates.
+  ATTENTION teacher preparation programs and schools of education: INCS is seeking recruitment partners to support our outreach efforts. Please consider sharing our site with highly qualified candidates.
   </p>
- -->
 
-<!--   <p class="disclaimer">
+  <!--   <p class="disclaimer">
     *This activity or event is not sponsored by, associated with, or endorsed by the UNO Charter School Network Inc., or its affiliates.
-  </p> -->
+    </p> -->
+    <p class="main-content">
+    If you have any questions or would like to receive a 2017 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
+  </p>
 
 </div>
