Update candidate button to include job fair registration

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
 
   <% if session[:user_id] == nil %>
     <div class="main-container">
-      <%= button_to "Candidate Resume Bank Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "Candidate Resume Bank and Job Fair Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
       <%= button_to "School Leader Resume Bank Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
   <% end %>
