--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <label>Name:</label> <%= user.prefix %> <%= user.first_name %> <%= user.last_name %><br>
   <label>Years of Experience: </label> <%= user.years %><br>
   <label>Licenses Held:</label> <%= user.licenses.map do |lic| lic.name end.join(', ') %><br>
-  <label>Registered for Job Fair:</label> <% if user.register != "bank" %>Yes<% else %>No<%end%><br>
+  <label>Registered for 2017 Job Fair:</label> <% if user.register2017 != "bank" %>Yes<% else %>No<%end%><br>
   <label>Location Preference:</label> <%= user.location_pref %><br>
   <label><a href="/users/<%= user.id %>">Profile</a></label><br>
 </div>
