--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,9 +52,9 @@
   <br />
 <% end %>
 <h3>Job Seeker Details</h3>
-<label>Name:</label> <%= @user.prefix%> <%= @user.first_name%> <%=@user.last_name%><br>
+<label>Name:</label> <%= @user.prefix == 'N/A' ? '' : @user.prefix%> <%= @user.first_name%> <%=@user.last_name%><br>
 <label>Email:</label> <%= @user.email%><br>
-<label>Registered for Job Fair:</label> <% if @user.register != "bank" %>Yes<% else %>No<%end%><br>
+<label>Registered for Job Fair:</label> <% if @user.register2017 != "bank" %>Yes<% else %>No<%end%><br>
 <label>Phone:</label> <%= @user.phone_number %><br>
 <label>City of Residence:</label> <%= @user.city %><br>
 <label>Licensed in Illinois:</label> <% if @user.il_licensed != "Other" %><%= @user.il_licensed %><% else %>Licensed in different state<% end %><br>
