--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -93,7 +93,7 @@
   <div class="field">
     <label><em class="label-bold">How did you hear about the 2017 INCS Job Fair? (Check all that apply) *</em></label><br>
     <ul class="checkbox-grid2">
-      <% Source.all.each do |source| %>
+      <% Source.all.order(:source_name).each do |source| %>
         <% if @user.sources.pluck(:source_name).include?(source.source_name) %>
           <li><input type="checkbox" name="sources[]" value="<%= source.source_name %>" checked/>
         <% else %>
@@ -118,7 +118,7 @@
   <div class="field">
     <label><em class="label-bold">Which field(s) does your desired position fall under? (Check all that apply) *</em></label><br>
     <ul class="checkbox-grid2">
-    <% Position.all.each do |pos| %>
+    <% Position.all.order(:title).each do |pos| %>
       <% if @user.positions.pluck(:title).include?(pos.title) %>
         <li><input type="checkbox" name="positions[]" value="<%= pos.title %>" checked/>
       <% else %>
@@ -134,6 +134,29 @@
     <input type="text" name="add-positions" value="" />
   </div>
   <br>
+
+  <div class="field">
+    <label><em class="label-bold">Preferred Subject(s)</em></label><br>
+    <ul class="checkbox-grid">
+      <li><input type="checkbox" name="subs[]" value="None" />
+      <label>N/A</label></li>
+      <% Subject.all.order(:subject).each do |sub| %>
+        <% if @user.subjects.pluck(:subject).include?(sub.subject) %>
+          <li><input type="checkbox" name="subs[]" value="<%= sub.subject %>" checked/>
+        <% else %>
+          <li><input type="checkbox" name="subs[]" value="<%= sub.subject %>" />
+        <% end %>
+        <label><%= sub.subject %></label></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="field2">
+    <input type="checkbox" name="subs[]" value=""/>
+    <label>Other (if multiple, separate with a comma)</label>
+    <input type="text" name="add-subs" value="" /><br>
+  </div>
+  <br>
+
   <div class="field">
     <em class="label-bold">
     <%= f.label(:name, "Are you licensed to teach in Illinois? *") %></em><br>
@@ -228,27 +251,6 @@
     </div>
   </div><br>
 
-  <div class="field">
-    <label><em class="label-bold">Preferred Subject(s)</em></label><br>
-    <ul class="checkbox-grid">
-      <li><input type="checkbox" name="subs[]" value="None" />
-      <label>None</label></li>
-      <% Subject.all.order(:subject).each do |sub| %>
-        <% if @user.subjects.pluck(:subject).include?(sub.subject) %>
-          <li><input type="checkbox" name="subs[]" value="<%= sub.subject %>" checked/>
-        <% else %>
-          <li><input type="checkbox" name="subs[]" value="<%= sub.subject %>" />
-        <% end %>
-        <label><%= sub.subject %></label></li>
-      <% end %>
-    </ul>
-  </div>
-  <div class="field2">
-    <input type="checkbox" name="subs[]" value=""/>
-    <label>Other (if multiple, separate with a comma)</label>
-    <input type="text" name="add-subs" value="" /><br>
-  </div>
-  <br>
 
   <div class="field field5">
     <em class="label-bold"><%= f.label(:location_pref, "Where are you willing to teach?") %></em><br>
